fixed pointer and CSS for hiding fake button on mobile only

--- a/assets/stylesheets/previews_mobile.scss
+++ b/assets/stylesheets/previews_mobile.scss
@@ -237,6 +237,6 @@ img.thumbnail:not(.tiles-thumbnail) {
   }
 }
 
-.portfolio-button {
+.mobile-view .portfolio-button {
   display: none;
 }
